i just change service dropdown

--- a/MyWeb/Service.html
+++ b/MyWeb/Service.html
@@ -19,9 +19,9 @@
             <div class="dropdown">
                 <a href="file:///D:/Programming/MyWeb/Service.html"><button class="dropbtn">Service</button></a>
                 <div class="dropdown-content">
-                  <a href="www.facebook.com">Link 1</a>
-                  <a href="www.facebook.com">Link 2</a>
-                  <a href="www.facebook.com">Link 3</a>
+                  <a href="www.facebook.com">Products</a>
+                  <a href="www.facebook.com">Goods</a>
+                  <a href="www.facebook.com">Services</a>
                 </div>
             </div>
             <div class="dropdown">
